package edu.hitsz.Observer;

public interface Observer {
    public abstract void update();
}
